--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.3",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
